# file-agent

./: .gitignore  LICENSE  README.md  classifier.py  cli.py  config.py  config.yaml  executor.py  extractors.py  file_agent.py  main.py  pyproject.toml  requirements.txt  scanner.py
.github/instructions/: git-commit.instructions.md  python-code-modification.instructions.md
file_agent/: __init__.py  classifier.py  cli.py  config.py  executor.py  extractors.py  plan_validation.py  scanner.py  types.py  undo_manager.py
file_agent/modes/: __init__.py  chat_mode.py  implement_mode.py
file_agent/prompts/: chat_system.txt  implement_system.txt
tests/: test_bug_fixes.py  test_chat_mode.py  test_config.py  test_display.py  test_executor.py  test_extractors.py  test_implement_mode.py  test_plan_loading.py  test_scanner.py  test_undo_manager.py
